# pde-solvers-cuda

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.txt  data.nc  flake.nix  modules.sh  pyproject.toml  res.txt  result.txt  scalings.ipynb  temp  test.ipynb
analysis/: .env  analysis.ipynb  anim_db.py  ball_int.ipynb  ball_sampling.ipynb  big.ipynb  big_run.ipynb  blowup.ipynb  brusselator-analysis-notebook.ipynb  classify.py  db copy.ipynb  db.ipynb  db_conv.ipynb  db_grids.ipynb  db_remote.ipynb  db_tools.ipynb  db_tools.py  dist.ipynb  eval.sh  gray_scott.ipynb  phase_transition.ipynb  point_selection.ipynb  scratch.ipynb  small_run.ipynb  test.ipynb  validate_classification.ipynb
analysis/old/: analyse_run.py  analyse_run2.py  output_anim_old.py
analysis/sample_data/: mix.csv  osc.csv  ss.csv  varied_points.csv
analysis/utils/: animation.py  classify.py  db_tools.py
benchmark/: CMakeLists.txt  run_benchmarks.cpp
config/: default.yaml  from_df.yaml  phase_transition.yaml
data/: bc_8_8.nc  data.nc  data_100_100.nc  data_8_8.nc  example.nc  example_long.nc  example_long_out.nc  example_out.nc  gs.nc  simple_data.nc  test.nc
include/: convolution.hpp  convolve_sigma_add_f.hpp  convolve_sigma_add_f_impl.cuh  coupled_function.hpp  coupled_function_2.hpp  dirichlet_bc.hpp  generic_function.hpp  helpers.hpp  neumann_bc.hpp  pde_base.hpp  pde_heat.hpp  pde_rd.hpp  pde_wave.hpp  periodic_bc.hpp  run_from_netcdf.hpp
include/cuda/: add_arrays_cuda.hpp  add_arrays_cuda_impl.cuh  add_arrays_interior_cuda.hpp  add_arrays_interior_cuda_impl.cuh  convolution_cuda.cuh  convolve_cuda.hpp  convolve_cuda_impl.cu  convolve_cuda_impl.cuh  convolve_sigma_add_f_cuda.hpp  convolve_sigma_add_f_cuda_impl.cuh  dirichlet_bc_cuda.hpp  dirichlet_bc_cuda_impl.cuh  neumann_bc_cuda.hpp  neumann_bc_cuda_impl.cuh  periodic_bc_cuda.hpp  periodic_bc_cuda_impl.cuh
include/io/: nc_writer.hpp  netcdf_reader.hpp  netcdf_writer.hpp  netcdf_writer2.hpp
include/kernel/: heat_kernel.hpp  kernel_base.hpp
res/: growing_Dv.html  gs_varying_beta.html
scripts/: Untitled-1.sh  analyse_run.py  analyse_run2.py  analysis.ipynb  benchmark_brusselator.py  brusselator_2.py  brusselator_script.py  clean_data_dir.py  config.md  config.py  config_gs.py  create_brusselator_input.py  create_devito_example.py  create_df.ipynb  create_netcdf_input.py  create_test_input_heat.py  create_test_input_heat_periodic.py  create_test_input_wave.py  create_test_input_wave_periodic.py  db.ipynb  db_tools.ipynb  del_dangling.sh  devito_comparaison.py  euler_script.sh  eval.sh  eval_job.sh  final_frame.py  gs_single.py  helpers.py  initial_conditions.py  make_inputs.py  make_inputs_from_df.py  make_inputs_from_grid.py  make_single_input.py  new_euler.txt  new_euler_notes.txt  new_runner.py  notes.md  only_run.sh  output_anim.py  (+21 more)
scripts/_old_files/: benchmark_script.sh  create_test_input_heat_periodic.py  make_inp_new.py  make_inputs_from_df.py  make_inputs_from_grid.py  plot_output_file.py  read_netcdf_file.py
scripts/config_files/: config_all_options.py
scripts/not_needed/: create_test_input_heat.py  create_test_input_heat_periodic.py
scripts/runners/: runner.sh  runner_dist.sh  runner_gs.sh  runner_ic.sh  runner_macos.sh  test.sh
src/: CMakeLists.txt  helpers_main.hpp  main.cpp  run_from_netcdf.cpp  satt.cpp
src/cuda/: CMakeLists.txt  add_arrays.cu  add_arrays_cuda.cu  add_arrays_interior_cuda.cu  convolve_cuda.cu  convolve_sigma_add_f_cuda.cu  dirichlet_bc_cuda.cu  neumann_bc_cuda.cu  periodic_bc_cuda.cu
src/generic_pde/: generic_pde.hpp  heat_equation.cpp  heat_equation.hpp  pde.hpp
test/: CMakeLists.txt  run_unit_tests.cpp  test_make_inputs.py
test/unit_tests/: CMakeLists.txt  test_coupled_function.cpp  test_heat_equation.cpp  test_wave_equation.cpp
