[project]
name = "pde-solvers-cuda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "netcdf4>=1.7.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "scipy>=1.14.1",
]

[tool.ruff]
ignore = ["F841", "F401"]
